k8s/manifest.yaml


      # initContainers:
      # - name: data-migrations
      #   #image: simpsquotesmlcacr.azurecr.io/mysql:8.0.29
      #   image: simpsquotesmlcacr.azurecr.io/simpsons-quotes-db:1.0
      #   # command: ['mysql', '--user=root', '--password=$MYSQL_ROOT_PASSWORD', '<', 'alta_db.sql']
      #   #command: ['sh', '-c', "mysql -h localhost --user=root --password=$$MYSQL_ROOT_PASSWORD < alta_db.sql"]
      #   # command: ['sh', '-c', "sleep 8 && mysql -P 3306 -h localhost --user=root --password=$$MYSQL_ROOT_PASSWORD < alta_db.sql"]
      #   command: ['sh', '-c', "sleep 8 && mysql --protocol=tcp --user=root --password=$$MYSQL_ROOT_PASSWORD < /usr/alta_db.sql"]
      #   volumeMounts:
      #   - mountPath: /var/lib/mysql
      #     name: simpsons-quotes-pv
      #   env:
      #     - name: MYSQL_ROOT_PASSWORD
      #       valueFrom: 
      #         secretKeyRef:
      #           name: simpsons-quotes-api-scrt
      #           key: DB_PASS
        # env:
        #  - name: DATABASE_URL
        #    value: mysql://root:pass_change_me@MY_IP:3306/DB_test




# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: simpsons-quotes-pv
# spec:
#   accessModes:
#     - ReadWriteOnce
#   capacity:
#     storage: 1Gi
#     # storageClassName: azurefile-csi
#     volumeMode: Filesystem
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpsons-quotes-api-deployment
  namespace: simpsons-quotes-ns
  labels:
    app: simpsons-quotes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpsons-quotes-api
  template:
    metadata:
      labels:
        app: simpsons-quotes-api
    spec:
      containers:
      - name: simpsons-quotes-api
        image: simpsquotesmlcacr.azurecr.io/simpsons-quotes:1.0  
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: simpsons-quotes-api-svc
  namespace: simpsons-quotes-ns
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: simpsons-quotes-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpsons-quotes-api-ingress
  namespace: simpsons-quotes-ns
spec:
  rules:
  #- host: myserviceb.foo.org
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simpsons-quotes-api-svc
            port:
              number: 8000
  ingressClassName: nginx
---
#####################
# db JOB ----------------------------------------------
#####################

# apiVersion: batch/v1
# kind: Job
# metadata:
#   name: simpsons-quotes-db-job
#   namespace: simpsons-quotes-ns
# spec:
#   template:
#     spec:
#       containers:
#       - name: simpsons-quotes-db-job
#         image: simpsquotesmlcacr.azurecr.io/simpsons-quotes-db:1.0  
#         #command: ['sh', '-c', "mysql -P 3306 -h simpsons-quotes-db-svc --user=root --password=$$MYSQL_ROOT_PASSWORD < alta_db.sql"]
#         #["mysql", "-P 3306", "-h simpsons-quotes-db-svc", "-u root",  "-p ", "< alta_db.sql"]
#         command: ['sh', '-c', "sleep 8 && mysql -h simpsons-quotes-db-svc -P 3306 --user=root --password=$$MYSQL_ROOT_PASSWORD < /usr/alta_db.sql"]
#         env:
#           - name: DB_HOST
#             valueFrom: 
#               secretKeyRef:
#                 name: simpsons-quotes-api-scrt
#                 key: DB_HOST
#           - name: DB_PORT
#             valueFrom: 
#               secretKeyRef:
#                 name: simpsons-quotes-api-scrt
#                 key: DB_PORT
#           - name: DB_USER
#             valueFrom: 
#               secretKeyRef:
#                 name: simpsons-quotes-api-scrt
#                 key: DB_USER
#           - name: DB_PASS
#             valueFrom: 
#               secretKeyRef:
#                 name: simpsons-quotes-api-scrt
#                 key: DB_PASS
#       restartPolicy: Never
#   backoffLimit: 4

---
#####################
# db ----------------------------------------------
#####################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpsons-quotes-db-deployment
  namespace: simpsons-quotes-ns
  labels:
    app: simpsons-quotes-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpsons-quotes-db
  template:
    metadata:
      labels:
        app: simpsons-quotes-db
    spec:
      containers:
      - name: simpsons-quotes-db
        image: simpsquotesmlcacr.azurecr.io/mysql:8.0.29    
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: simpsons-quotes-pv
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
        ports:
        - containerPort: 3306
      volumes:
        - name: simpsons-quotes-pv
          persistentVolumeClaim:
            claimName: simpsons-quotes-pvc
        - name: mysql-initdb
          configMap:
            name: simpsons-quotes-db-initdb-config



---
apiVersion: v1
kind: Service
metadata:
  name: simpsons-quotes-db-svc
  namespace: simpsons-quotes-ns
  labels:
    app: simpsons-quotes-db
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
  selector:
    app: simpsons-quotes-db
---
